--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "@types/fast-html-parser": "^1.0.0",
+    "@types/jsdom": "^16.2.1",
     "@types/node": "^13.11.1",
-    "fast-html-parser": "^1.0.1"
+    "fast-html-parser": "^1.0.1",
+    "htmljs-parser": "^2.7.1",
+    "jsdom": "^16.2.2"
   }
 }
